[tool.poetry]
name = "repl_python3_Stock-Visualizer"
version = "0.1.0"
description = ""
authors = ["khloer <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
